// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsWithAnswersOfUser render questions[0] TRUE 1`] = `
<InfinityLoader
  infinityOff={false}
  isLastFetch={false}
  isLoading={true}
  loadNextPaginatedData={[Function]}
>
  <div
    className="className"
  >
    <UNDEFINED
      userId="userId"
    />
    <QuestionsWithAnswersList
      communities={Array []}
      locale="en"
      questions={
        Array [
          Object {
            "acceptedAnswer": false,
            "answers": Array [],
            "communities": Array [],
            "communityId": 123,
            "id": "id",
            "locale": "en",
            "myPostRating": 100,
            "myPostTime": 1550837750334,
            "title": "title",
          },
        ]
      }
    />
    <UNDEFINED />
  </div>
</InfinityLoader>
`;

exports[`QuestionsWithAnswersOfUser render questionsLoading TRUE 1`] = `
<InfinityLoader
  infinityOff={false}
  isLastFetch={false}
  isLoading={true}
  loadNextPaginatedData={[Function]}
>
  <div
    className="className"
  >
    <UNDEFINED
      userId="userId"
    />
    <UNDEFINED />
  </div>
</InfinityLoader>
`;
